atualizei link do CSS,lincando a pasta CSS

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>Ramon Verissimo - Desnvolvedor</title>
   <meta name="description" content="Ramon Verissimo, desenvolvedor web localizado em Campinas.">
   <!-- <link rel="stylesheet" href="/style.css"> -->
-  <link rel="stylesheet" href="/header.css">
-  <link rel="stylesheet" href="/global.css">
-  <link rel="stylesheet" href="/introducao.css">
-  <link rel="stylesheet" href="/experiencia.css">
-  <link rel="stylesheet" href="/formacao.css">
-  <link rel="stylesheet" href="/footer.css">
+  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="/css/introducao.css">
+  <link rel="stylesheet" href="/css/experiencia.css">
+  <link rel="stylesheet" href="/css/formacao.css">
+  <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
