--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/css/experiencia.css">
   <link rel="stylesheet" href="/css/formacao.css">
   <link rel="stylesheet" href="/css/footer.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
